--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,35 +7,35 @@
 </ion-header>
 
 <ion-content>
-    <ion-card class="welcome-card">
-      <img src="/assets/shapes.svg" alt="" />
-      <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
+    
+  <ion-grid>
+    <ion-row>
+      <ion-col *ngFor="let item of mystorage" size-lg="2" size-md="3" size-sm="4" size-xl="3" size-xs="6">
+        <ion-card class="xx"  style="padding: 0%">
+
+          <ion-slides [options]="sliderOpts" >
+            <ion-slide *ngFor="let img of [item.prdstg.pht1PRD, item.prdstg.pht2PRD,
+                                            item.prdstg.pht3PRD, item.prdstg.pht4PRD]">
+                                         
+              <img src="{{img}}" class="yy" *ngIf="img!=null" (click)="openImage(img)">
+            </ion-slide>
+          </ion-slides>
+          <div>
+            <ion-label class="zz">
+              {{item.prdstg.nomprd}}
+            </ion-label>
+            <ion-chip color="light" outline=true  style="float: right;">
+              <ion-icon name="heart" color="danger" *ngIf="item.likestg.indexOf(1)>=0" (click)="Like(item.idstg)">
+              </ion-icon>
+
+              <ion-icon name="heart-empty" *ngIf="item.likestg.indexOf(1)<0" (click)="Like(item.idstg)"></ion-icon>
+
+              <ion-label>{{item.likestg.length}}</ion-label>
+            </ion-chip>
+          </div>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
