--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -2,3 +2,23 @@
   max-height: 35vh;
   overflow: hidden;
 }
+ 
+
+ion-slides {  
+  background: #fafafa;
+  img{
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+}
+
+.card_label {
+  margin: 0%;
+  padding: 0%;
+  font-family: 'Bad Script', cursive;
+}
+
+.iocard{
+  margin: 0%; 
+  padding: 0%;
+}
