--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -9,6 +9,7 @@ ion-slides {
   img{
     padding-top: 5px;
     padding-bottom: 5px;
+    
   }
 }
 
@@ -19,6 +20,11 @@ ion-slides {
 }
 
 .iocard{
-  margin: 0%; 
+  margin-bottom: 70px;
+  margin-right: 20px;
   padding: 0%;
+}
+
+.infos{
+  color: #8fe0d3;
 }
