--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,12 +1,21 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab One
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-item>
+
+  <ion-chip color="light" outline=true style="float: left;margin: 0%;">
+    <ion-back-button defaultHref="/" text="Retour"></ion-back-button>
+  </ion-chip>
+
+  <ion-chip color="light" outline=true style="float: left;margin: 0%;">
+    <ion-icon name="cart"></ion-icon>
+  </ion-chip>
+
+  <ion-chip color="light" outline=true style="float: left;margin: 0%;">
+    <ion-icon name="search"></ion-icon>
+  </ion-chip>
+
+</ion-item>
 
 <ion-content>
+
 
   <ion-grid>
     <ion-row>
